pages/css/archive/blog.css
* {box-sizing: border-box;}
body {
	background: #cf682f;
	font-family: "Helvetica Neue", "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
	font-size: 14px;
	line-height: 1.3;
	padding: 0;
	margin: 0;
}
header p, h1 {
	margin-block-start: 0;
	margin-block-end: 0;
}
header {
	display: flex;
	justify-content: space-between;
}
header a {
	text-align: right;
	font-size: 11px;
	margin: 4px 10px 0 0;
	padding: 0 0 2px 0;
	color: #ffd88d;
	text-decoration: none;
}
header p {
	padding: 1px 3px 1px 3px;
	margin-left: 5px;
	font-weight: bold;
	color: #ffd88d;
}
header a:hover {color: white;}
.bluecontent {
	background: #cae7fd url(/media/archive/blog/layout/orangeborder.gif) repeat-x bottom left;
	margin: 2px 0 0 0;
	border-top: 1px solid #78726f;
	padding-bottom: 25px;
	color: #555;
	padding: 20px;
}
#logo {text-align: right;}
#central, #article-head {
	display: flex;
	gap: 10px;
}
#article-head a {text-decoration: none;}
aside, article {
	background-color: white;
	padding: 4px;
	border-right: 1px solid #929ca3;
	border-bottom: 1px solid #929ca3;
}
aside {
	width: 160px;
}
aside h3 {
	color: #666;
	font-family: Georgia, 'Times New Roman', Times, serif;
	font-style: italic;
	border-bottom: 1px solid #ccc;
	font-size: 15px;
}
aside ul li {
	list-style: square;
	padding: 0 0 10px 0;
	line-height: 1.4;
}
aside ul li a {font-size: 11px;}
aside ul li a, article a {
	color: #980027;
}
article {
	background: white url(/media/archive/blog/layout/corner1.gif) no-repeat right bottom;
	width: 100%;
	max-width: 600px;
	clear: both;
	padding: 15px;
	padding-top: 10px;
}
article p {
	margin-bottom: 28px;
	line-height: 22px;
}
#author, #date {color: #c0c0c0;}
#date {
	font-weight: bold;
	min-width: 100px;
}
#author {text-align: right;}
footer {
	margin: 20px auto;
	font-size: 11px;
	text-align: right;
	color: #AC4610;
	padding-right: 10px;
}
footer a {
	color: #ffd88d;
	margin-left: 5px;
	padding: 0 3px 0 3px;
}
footer a:hover {color: white;}

